--- a/FAQ.html
+++ b/FAQ.html
@@ -129,6 +129,12 @@
 		  <p>
 		    A7: No, you do not have to. But you need to only use the hamiltonian of hydroxyl with Jordan-Wigner mapping (which should give you 12 qubits and 631 pauli terms), you are allowed to use any related tool to generate different description styles of this hamiltonian, but please include your format of described hamiltonian in both the source code and self-reflection.
 		  </p>
+      <h5>
+		    Q8: Impact of Error Mitigation: some error mitigation techniques often increase circuit depth and the number of measurements for a single Pauli string. Should these additional costs be considered in the overall count, or are we solely concerned with the original circuit? (Speical thanks to Weitang Li from Tencent Quantum Team give valuable question.)
+		  </h5>
+      <p>
+		    A8: The cost will be counted, there will be a tradeoff between the accuracy and the quantum resource cost.  
+		  </p>
         </div>            
       </div>
       
