--- a/Winners.html
+++ b/Winners.html
@@ -10,7 +10,7 @@
     <!-- Scrollbar Custom CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>2022 ACM/IEEE TinyML Design Contest @ ICCAD</title>
+    <title>2023 ACM/IEEE Quantum Computing for Drug Discovery Challenge @ ICCAD</title>
   </head>
   <body>
 
@@ -18,7 +18,7 @@
       <!-- Sidebar -->
       <nav id="sidebar">
         <div class="sidebar-header">
-          <h3><a href="/">TinyML Contest</a></h3>
+          <h3><a href="/">Quantum Computing for Drug Discovery Challenge</a></h3>
         </div>
 
         <ul class="list-unstyled components">
@@ -52,18 +52,35 @@
       <div id="content">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <div class="container-fluid">
+<!--             <ul class="navbar-nav"> -->
+<!--               <li class="nav-item"> -->
             <button type="button" id="sidebarCollapse" class="btn btn-outline-secondary">
               <span class="navbar-toggler-icon"></span>
             </button>
-                <a href="https://iccad.com/"><img border="0" src="Figures/ICCAD_2022.png" width="140" height="100"></a>
+<!--               </li> -->
+<!--             </div> -->
+            
+<!--               <li class="nav-item"> -->
+                <a href="https://iccad.com/">
+                                      <img border="0" src="Figures/iccad.PNG" width="140" height="100"></a>
+<!--               </li> -->
+<!--               <li class="nav-item" style="margin:auto"> -->
             <div>
-                <h2><a class="nav-link" href="/">2022 ACM/IEEE TinyML Design Contest at ICCAD<span class="sr-only">(current)</span></a></h2>
-            </div>
-            <a href="https://www.mouser.com/ProductDetail/STMicroelectronics/NUCLEO-L432KC?qs=qzCNEk%252BRr%252BajjPvxjwWK5g%3D%3D">
-                                    <img border="0" src="Figures/1.jpg" width="100" height="100"></a>
+                <h2><a class="nav-link" href="/">2023 Quantum Computing for Drug Discovery Challenge at ICCAD<span class="sr-only">(current)</span></a></h2>
+<!--               </li> -->
+</div>
+<!--               <li class="nav-item"> -->
+                <a href="/">
+                                    <img border="0" src="Figures/qc.png" width="100" height="100"></a>
+<!--               </li> -->
+<!--               <li class="nav-item"> -->
+<!--                 <a href="https://www.mouser.com/ProductDetail/STMicroelectronics/NUCLEO-L432KC?qs=qzCNEk%252BRr%252BajjPvxjwWK5g%3D%3D">
+                                      <img border="0" src="Figures/4.jpg" width="90" height="75"></a> -->
+<!--               </li> -->
+<!--             </ul> -->
+            
           </div> 
         </nav>
- 
         <hr style="width: 100%; height: 2px;">
         <div class="container">
           <h3>
