--- a/Winners.html
+++ b/Winners.html
@@ -92,17 +92,17 @@
 		  <p><u><span style=" font-family: &quot;Arial&quot;,sans-serif; color: black;" lang="EN-US">
 		  					First Place </span></u><br>
 		  					Member: Hanrui Wang, Pengyu Liu, Pingzhi Li, Junyao Zhang, Shreya Chaudhary, Tianlong Chen, Yiran Chen, Song Han<br>
-		  					Team ID: RobustQuantum-2023
+		  					<br>Team ID: RobustQuantum-2023<br>
                             Team Affiliation: Massachusetts Institute of Technology, Carnegie Mellon University, Duke University, University of North Carolina at Chapel Hill</span></p>
 			<p><u><span style=" font-family: &quot;Arial&quot;,sans-serif; color: black;" lang="EN-US">
 								Second Place </span></u><br>
 								Member: Weitang Li<br>
-								Team ID: TQL
+								<br>Team ID: TQL<br>
                                 Team Affiliation: Tecent Quantum Lab</span></p>
 		<p><u><span style=" font-family: &quot;Arial&quot;,sans-serif; color: black;" lang="EN-US">
 							Third Place </span></u><br>
 							Member: Jialin Chen, Ke Xu, Di Wu, Jin Li, Jiaoyun Jin, Zhiqiang Cai <br>
-							Team ID: QuantumLoop
+							<br>Team ID: QuantumLoop<br>
                             Team Affiliation: Fudan University</span></p>						
 		<span style="font-family: &quot;Arial&quot;,sans-serif; color: black; font-weight:700" lang="EN-US">
 							Please accept our heartiest congratulations!!<o:p></o:p></span></p>
@@ -117,8 +117,8 @@
         <td>Team name</td>
         <td>Final Score</td>
         <td>Accuracy</td>
-        <td>Quantum Resource Cost</td>
-        <td>Self-Reflection</td>
+        <td>QRC</td>
+        <td>Reflection</td>
     </tr>
     <tr>
         <td>1</td>
@@ -235,7 +235,7 @@
     <tr>
         <td>15</td>
         <td>MediQal</td>
-        <td>133.18(</td>
+        <td>133.18</td>
         <td>97.88</td>
         <td>28.8</td>
         <td>6.5</td>
@@ -285,7 +285,7 @@
         <td>KSU-Guans-Quantum</td>
         <td>60</td>
         <td>less 60</td>
-        <td>-/td>
+        <td>-</td>
         <td>-</td>
     </tr>
     <tr>
@@ -305,9 +305,9 @@
         <td>Rank</td>
         <td>Team name</td>
         <td>Final Score</td>
-        <td></b>Accuracy</b></td>
-        <td>Quantum Resource Cost</td>
-        <td>Self-Reflection</td>
+        <td><b>Accuracy</b></td>
+        <td>QRC</td>
+        <td>Reflection</td>
     </tr>
     <tr>
         <td>1</td>
@@ -321,7 +321,7 @@
         <td>2</td>
         <td>underwater</td>
         <td>137.232</td>
-        <td></b>99.932</b></td>
+        <td><b>99.932</b></td>
         <td>29.8</td>
         <td>7.5</td>
     </tr>
@@ -329,7 +329,7 @@
         <td>3</td>
         <td>TQL</td>
         <td>148.93</td>
-        <td></b>99.93</b></td>
+        <td><b>99.93</b></td>
         <td>39</td>
         <td>10</td>
     </tr>
@@ -337,7 +337,7 @@
         <td>4</td>
         <td>RobustQuantum-2023</td>
         <td>149.393</td>
-        <td></b>99.893</b></td>
+        <td><b>99.893</b></td>
         <td>40</td>
         <td>9.5</td>
     </tr>
@@ -345,7 +345,7 @@
         <td>5</td>
         <td>QemSpin</td>
         <td>133.114</td>
-        <td></b>98.814</b></td>
+        <td><b>98.814</b></td>
         <td>26.8</td>
         <td>7.5</td>
     </tr>
@@ -359,15 +359,15 @@
         <td>Team name</td>
         <td>Final Score</td>
         <td>Accuracy</td>
-        <td></b>Quantum Resource Cost</b></td>
-        <td>Self-Reflection</td>
+        <td><b>QRC</b></td>
+        <td>Reflection</td>
     </tr>
     <tr>
         <td>1</td>
         <td>RobustQuantum-2023</td>
         <td>149.393</td>
         <td>99.893</td>
-        <td></b>40</b></td>
+        <td><b>40</b></td>
         <td>9.5</td>
     </tr>
     <tr>
@@ -375,7 +375,7 @@
         <td>Coastal Alliance</td>
         <td>146.48</td>
         <td>98.08</td>
-        <td></b>39.9</b></td>
+        <td><b>39.9</b></td>
         <td>8.5</td>
     </tr>
     <tr>
@@ -383,7 +383,7 @@
         <td>ALCom Quantum Boys & Girls</td>
         <td>141.405</td>
         <td>95.605</td>
-        <td></b>39.8</b></td>
+        <td><b>39.8</b></td>
         <td>6</td>
     </tr>
     <tr>
@@ -391,7 +391,7 @@
         <td>QuantumLoop</td>
         <td>147.832</td>
         <td>99.732</td>
-        <td></b>39.6</b></td>
+        <td><b>39.6</b></td>
         <td>8.5</td>
     </tr>
     <tr>
@@ -399,7 +399,7 @@
         <td>Quantum Korea</td>
         <td>147.36</td>
         <td>99.96</td>
-        <td></b>39.4</b></td>
+        <td><b>39.4</b></td>
         <td>8</td>
     </tr>
     </table><br>
@@ -411,8 +411,8 @@
         <td>Team name</td>
         <td>Final Score</td>
         <td>Accuracy</td>
-        <td>Quantum Resource Cost</td>
-        <td></b>Self-Reflection</b></td>
+        <td>QRC</td>
+        <td><b>Reflection</b></td>
     </tr>
     <tr>
         <td>1</td>
@@ -420,7 +420,7 @@
         <td>135.47</td>
         <td>98.07</td>
         <td>27.4</td>
-        <td></b>10</b></td>
+        <td><b>10</b></td>
     </tr>
     <tr>
         <td>1</td>
@@ -428,7 +428,7 @@
         <td>148.93</td>
         <td>99.93</td>
         <td>39</td>
-        <td></b>10</b></td>
+        <td><b>10</b></td>
     </tr>
     <tr>
         <td>3</td>
@@ -436,7 +436,7 @@
         <td>149.393</td>
         <td>99.893</td>
         <td>40</td>
-        <td></b>9.5</b></td>
+        <td><b>9.5</b></td>
     </tr>
     <tr>
         <td>4</td>
@@ -444,7 +444,7 @@
         <td>141.418</td>
         <td>96.218</td>
         <td>36.2</td>
-        <td></b>9</b></td>
+        <td><b>9</b></td>
     </tr>
     <tr>
         <td>5</td>
@@ -452,7 +452,7 @@
         <td>145.77</td>
         <td>98.07</td>
         <td>39.2</td>
-        <td></b>8.5</b></td>
+        <td><b>8.5</b></td>
     </tr>
     <tr>
         <td>5</td>
@@ -460,7 +460,7 @@
         <td>147.832</td>
         <td>99.732</td>
         <td>39.6</td>
-        <td></b>8.5</b></td>
+        <td><b>8.5</b></td>
     </tr>
     <tr>
         <td>5</td>
@@ -468,7 +468,7 @@
         <td>146.48</td>
         <td>98.08</td>
         <td>39.9</td>
-        <td></b>8.5</b></td>
+        <td><b>8.5</b></td>
     </tr>
     </table>
         </div>            
