--- a/Winners.html
+++ b/Winners.html
@@ -110,7 +110,7 @@
 		<!-- <a href="https://tinymlcontest.github.io/TinyML-Design-Contest/Slides-TinyML-Contest-2022.pdf">[TinyML Contest Announcement Slides]<br></a> -->
 
 		  <p>
-		  You can also view the following table to get detailed team scores: </p>
+		  You can also view the following table to get detailed team scores for top 20 teams, if your team name not listed in the top 20 teams, please feel free to contact for the detail score for your team: </p>
 		  <table>
     <tr>
         <td>Rank</td>
@@ -280,7 +280,7 @@
         <td>36.5</td>
         <td>7</td>
     </tr>
-    <tr>
+    <!-- <tr>
         <td>21</td>
         <td>KSU-Guans-Quantum</td>
         <td>60</td>
@@ -295,7 +295,7 @@
         <td>-</td>
         <td>-</td>
         <td>-</td>
-    </tr>
+    </tr> -->
 </table><br>
 <p>
 		  This is the top5 team ranking based on the Accuracy metric.</p>
