--- a/Winners.html
+++ b/Winners.html
@@ -433,10 +433,10 @@
     <tr>
         <td>3</td>
         <td>RobustQuantum-2023</td>
-        <td>149.393</td>
-        <td>99.893</td>
-        <td>40</td>
-        <td><b>9.5</b></td>
+        <td>hidden</td>
+        <td>hidden</td>
+        <td>hidden</td>
+        <td><b>hidden</b></td>
     </tr>
     <tr>
         <td>4</td>
