--- a/Winners.html
+++ b/Winners.html
@@ -86,7 +86,7 @@
           <h3>
             Winners
           </h3>
-          <p>
+          <!-- <p>
             Congrats to:
           </p>
 		  <p><u><span style=" font-family: &quot;Arial&quot;,sans-serif; color: black;" lang="EN-US">
@@ -105,7 +105,7 @@
 							<br>Team ID: QuantumLoop<br>
                             Team Affiliation: Fudan University</span></p>						
 		<span style="font-family: &quot;Arial&quot;,sans-serif; color: black; font-weight:700" lang="EN-US">
-							Please accept our heartiest congratulations!!<o:p></o:p></span></p>
+							Please accept our heartiest congratulations!!<o:p></o:p></span></p> -->
 
 		<!-- <a href="https://tinymlcontest.github.io/TinyML-Design-Contest/Slides-TinyML-Contest-2022.pdf">[TinyML Contest Announcement Slides]<br></a> -->
 
@@ -120,7 +120,7 @@
         <td>QRC</td>
         <td>Reflection</td>
     </tr>
-    <tr>
+    <!-- <tr>
         <td>1</td>
         <td>RobustQuantum-2023</td>
         <td>149.393</td>
@@ -143,7 +143,7 @@
         <td>99.732</td>
         <td>39.6</td>
         <td>8.5</td>
-    </tr>
+    </tr> -->
     <tr>
         <td>4</td>
         <td>Quantum Korea</td>
@@ -425,10 +425,10 @@
     <tr>
         <td>1</td>
         <td>TQL</td>
-        <td>148.93</td>
-        <td>99.93</td>
-        <td>39</td>
-        <td><b>10</b></td>
+        <td>hidden</td>
+        <td>hidden</td>
+        <td>hidden</td>
+        <td><b>hidden</b></td>
     </tr>
     <tr>
         <td>3</td>
