--- a/Winners.html
+++ b/Winners.html
@@ -86,10 +86,10 @@
           <h3>
             Winners
           </h3>
-          <!-- <p>
+          <p>
             Congrats to:
           </p>
-		  <p><u><span style=" font-family: &quot;Arial&quot;,sans-serif; color: black;" lang="EN-US">
+		  <!-- <p><u><span style=" font-family: &quot;Arial&quot;,sans-serif; color: black;" lang="EN-US">
 		  					First Place </span></u><br>
 		  					Member: Hanrui Wang, Pengyu Liu, Pingzhi Li, Junyao Zhang, Shreya Chaudhary, Tianlong Chen, Yiran Chen, Song Han<br>
 		  					<br>Team ID: RobustQuantum-2023<br>
