--- a/Winners.html
+++ b/Winners.html
@@ -329,18 +329,18 @@
     <tr>
         <td>3</td>
         <td>TQL</td>
-        <td>148.93</td>
-        <td><b>99.93</b></td>
-        <td>39</td>
-        <td>10</td>
+        <td>hidden</td>
+        <td><b>hidden</b></td>
+        <td>hidden</td>
+        <td>hidden</td>
     </tr>
     <tr>
         <td>4</td>
         <td>RobustQuantum-2023</td>
-        <td>149.393</td>
-        <td><b>99.893</b></td>
-        <td>40</td>
-        <td>9.5</td>
+        <td>hidden</td>
+        <td><b>hidden</b></td>
+        <td>hidden</td>
+        <td>hidden</td>
     </tr>
     <tr>
         <td>5</td>
