--- a/Winners.html
+++ b/Winners.html
@@ -366,10 +366,10 @@
     <tr>
         <td>1</td>
         <td>RobustQuantum-2023</td>
-        <td>149.393</td>
-        <td>99.893</td>
-        <td><b>40</b></td>
-        <td>9.5</td>
+        <td>hidden</td>
+        <td>hidden</td>
+        <td><b>hidden</b></td>
+        <td>hidden</td>
     </tr>
     <tr>
         <td>2</td>
@@ -390,10 +390,10 @@
     <tr>
         <td>4</td>
         <td>QuantumLoop</td>
-        <td>147.832</td>
-        <td>99.732</td>
-        <td><b>39.6</b></td>
-        <td>8.5</td>
+        <td>hidden</td>
+        <td>hidden</td>
+        <td><b>hidden</b></td>
+        <td>hidden</td>
     </tr>
     <tr>
         <td>5</td>
@@ -458,10 +458,10 @@
     <tr>
         <td>5</td>
         <td>QuantumLoop</td>
-        <td>147.832</td>
-        <td>99.732</td>
-        <td>39.6</td>
-        <td><b>8.5</b></td>
+        <td>hidden</td>
+        <td>hidden</td>
+        <td>hidden</td>
+        <td><b>hidden</b></td>
     </tr>
     <tr>
         <td>5</td>
