--- a/Winners.html
+++ b/Winners.html
@@ -89,7 +89,7 @@
           <p>
             Congrats to:
           </p>
-          TQL, RobustQuantum-2023, QuantumLoop Teams as top three teams! And we will release the top 3 details in ICCAD 2023!
+          <b>TQL, RobustQuantum-2023, QuantumLoop</b> Teams as top three teams! And we will release the top 3 details in ICCAD 2023!
 		  <!-- <p><u><span style=" font-family: &quot;Arial&quot;,sans-serif; color: black;" lang="EN-US">
 		  					First Place </span></u><br>
 		  					Member: Hanrui Wang, Pengyu Liu, Pingzhi Li, Junyao Zhang, Shreya Chaudhary, Tianlong Chen, Yiran Chen, Song Han<br>
