--- a/Winners.html
+++ b/Winners.html
@@ -466,7 +466,9 @@
     </table>
         </div>            
       </div>
-      
+      <p>
+        <b>Reviewers:</b> We are appreciate the our reviewers: Syed Farhan Ahmad (North Carolina State University, US), Rui Yang (Peking University, CN), Hang Ren (University of California, Bekerley, US), Haowei Deng (University of Maryland College Park), Zhirui Hu (George Mason University, US), Jinglei Cheng (Purdue University, US), Jindi Wu (William & Mary), Yanzhang Zhu (Northeastern University). 
+      </p>   
     </div>
     <div class="card-footer text-muted text-center">
         Copyright © ACM/IEEE Quantum Computing for Drug Discovery Challenge at ICCAD. All Rights Reserved.
