--- a/Winners.html
+++ b/Winners.html
@@ -109,7 +109,8 @@
 							Please accept our heartiest congratulations!!<o:p></o:p></span></p> -->
 
 		<!-- <a href="https://tinymlcontest.github.io/TinyML-Design-Contest/Slides-TinyML-Contest-2022.pdf">[TinyML Contest Announcement Slides]<br></a> -->
-
+        <p><b>EPiQC</b> Team has been selected to win the Innovation Award! We will release the detail of the technique the team implemented soon!
+             </p>
 		  <p>
 		  You can also view the following table to get detailed team scores for top 20 teams, if your team name not listed in the top 20 teams, please feel free to contact for the detail score for your team: </p>
 		  <table>
@@ -465,10 +466,10 @@
     </tr>
     </table>
         </div>            
-      </div>
       <p>
         <b>Reviewers:</b> We are appreciate the our reviewers: Syed Farhan Ahmad (North Carolina State University, US), Rui Yang (Peking University, CN), Hang Ren (University of California, Bekerley, US), Haowei Deng (University of Maryland College Park), Zhirui Hu (George Mason University, US), Jinglei Cheng (Purdue University, US), Jindi Wu (William & Mary), Yanzhang Zhu (Northeastern University). 
       </p>   
+    </div>
     </div>
     <div class="card-footer text-muted text-center">
         Copyright © ACM/IEEE Quantum Computing for Drug Discovery Challenge at ICCAD. All Rights Reserved.
