--- a/Winners.html
+++ b/Winners.html
@@ -467,7 +467,7 @@
     </table>
         </div>            
       <p>
-        <b>Reviewers:</b> We are appreciate the our reviewers: Syed Farhan Ahmad (North Carolina State University, US), Rui Yang (Peking University, CN), Hang Ren (University of California, Bekerley, US), Haowei Deng (University of Maryland College Park), Zhirui Hu (George Mason University, US), Jinglei Cheng (Purdue University, US), Jindi Wu (William & Mary), Yanzhang Zhu (Northeastern University). 
+        <b>Reviewers:</b> We are appreciate our reviewers: Syed Farhan Ahmad (North Carolina State University, US), Rui Yang (Peking University, CN), Hang Ren (University of California, Bekerley, US), Haowei Deng (University of Maryland College Park, US), Zhirui Hu (George Mason University, US), Jinglei Cheng (Purdue University, US), Jindi Wu (William & Mary, US), Yanzhang Zhu (Northeastern University, US). 
       </p>   
     </div>
     </div>
