--- a/Winners.html
+++ b/Winners.html
@@ -89,11 +89,11 @@
           <p>
             Congrats to:
           </p>
-          <b>TQL, RobustQuantum-2023, QuantumLoop</b> Teams as top three teams! And we will release the top 3 details in ICCAD 2023!
+          <b>TQL, MIT-EPiQC-CMU-Duke, QuantumLoop</b> Teams as top three teams! And we will release the top 3 details in ICCAD 2023!
 		  <!-- <p><u><span style=" font-family: &quot;Arial&quot;,sans-serif; color: black;" lang="EN-US">
 		  					First Place </span></u><br>
 		  					Member: Hanrui Wang, Pengyu Liu, Pingzhi Li, Junyao Zhang, Shreya Chaudhary, Tianlong Chen, Yiran Chen, Song Han<br>
-		  					<br>Team ID: RobustQuantum-2023<br>
+		  					<br>Team ID: MIT-EPiQC-CMU-Duke<br>
                             Team Affiliation: Massachusetts Institute of Technology, Carnegie Mellon University, Duke University, University of North Carolina at Chapel Hill</span></p>
 			<p><u><span style=" font-family: &quot;Arial&quot;,sans-serif; color: black;" lang="EN-US">
 								Second Place </span></u><br>
@@ -124,7 +124,7 @@
     </tr>
     <!-- <tr>
         <td>1</td>
-        <td>RobustQuantum-2023</td>
+        <td>MIT-EPiQC-CMU-Duke</td>
         <td>149.393</td>
         <td>99.893</td>
         <td>40</td>
@@ -329,7 +329,7 @@
     </tr>
     <tr>
         <td>4</td>
-        <td>RobustQuantum-2023</td>
+        <td>MIT-EPiQC-CMU-Duke</td>
         <td>hidden</td>
         <td><b>hidden</b></td>
         <td>hidden</td>
@@ -358,7 +358,7 @@
     </tr>
     <tr>
         <td>1</td>
-        <td>RobustQuantum-2023</td>
+        <td>MIT-EPiQC-CMU-Duke</td>
         <td>hidden</td>
         <td>hidden</td>
         <td><b>hidden</b></td>
@@ -426,7 +426,7 @@
     </tr>
     <tr>
         <td>3</td>
-        <td>RobustQuantum-2023</td>
+        <td>MIT-EPiQC-CMU-Duke</td>
         <td>hidden</td>
         <td>hidden</td>
         <td>hidden</td>
