--- a/Winners.html
+++ b/Winners.html
@@ -89,12 +89,12 @@
           <p>
             Congrats to:
           </p>
-          <b>TQL, MIT-EPiQC-CMU-Duke, QuantumLoop</b> Teams as top three teams! And we will release the top 3 details in ICCAD 2023!
-		  <!-- <p><u><span style=" font-family: &quot;Arial&quot;,sans-serif; color: black;" lang="EN-US">
+          <b>TQL, MIT-EPiQC-CMU-Duke, QuantumLoop</b> Teams as top three teams! 
+		  <p><u><span style=" font-family: &quot;Arial&quot;,sans-serif; color: black;" lang="EN-US">
 		  					First Place </span></u><br>
-		  					Member: Hanrui Wang, Pengyu Liu, Pingzhi Li, Junyao Zhang, Shreya Chaudhary, Tianlong Chen, Yiran Chen, Song Han<br>
+		  					Member: Hanrui Wang, Pengyu Liu, Pingzhi Li, Junyao Zhang, Shreya Chaudhary, Tianlong Chen, Yiran Chen, Fred Chong, Song Han<br>
 		  					<br>Team ID: MIT-EPiQC-CMU-Duke<br>
-                            Team Affiliation: Massachusetts Institute of Technology, Carnegie Mellon University, Duke University, University of North Carolina at Chapel Hill</span></p>
+                            Team Affiliation: Massachusetts Institute of Technology, Carnegie Mellon University, Duke University, University of North Carolina at Chapel Hill, University of Chicago</span></p>
 			<p><u><span style=" font-family: &quot;Arial&quot;,sans-serif; color: black;" lang="EN-US">
 								Second Place </span></u><br>
 								Member: Weitang Li<br>
@@ -122,7 +122,7 @@
         <td>QRC</td>
         <td>Reflection</td>
     </tr>
-    <!-- <tr>
+    <tr>
         <td>1</td>
         <td>MIT-EPiQC-CMU-Duke</td>
         <td>149.393</td>
@@ -132,7 +132,7 @@
     </tr>
     <tr>
         <td>2</td>
-        <td>TQL</td>
+        <td><a href="https://github.com/liwt31/QC-Contest-Demo"> TQL</td>
         <td>148.93</td>
         <td>99.93</td>
         <td>39</td>
@@ -156,7 +156,7 @@
     </tr>
     <tr>
         <td>5</td>
-        <td>Coastal Alliance</td>
+        <td><a href="https://github.com/ping-shuo-hao/ACCAD_QC_Contest.git"> Coastal Alliance</a></td>
         <td>146.48</td>
         <td>98.08</td>
         <td>39.9</td>
@@ -164,7 +164,7 @@
     </tr>
     <tr>
         <td>6</td>
-        <td>Positive Technology Lab</td>
+        <td><a href="https://github.com/positivetechnologylab/ptl-iccad-contest-2023"> Positive Technology Lab</a></td>
         <td>145.77</td>
         <td>98.07</td>
         <td>39.2</td>
@@ -212,7 +212,7 @@
     </tr>
     <tr>
         <td>12</td>
-        <td>underwater</td>
+        <td><a href=" https://github.com/royess/QC-Contest-underwater"> underwater (Second Place Performance in terms of Accuracy)</a></td> 
         <td>137.232</td>
         <td>99.932</td>
         <td>29.8</td>
