--- a/Winners.html
+++ b/Winners.html
@@ -124,7 +124,7 @@
     </tr>
     <tr>
         <td>1</td>
-    
+        <td><a href="https://github.com/Hanrui-Wang/quantum-drug-discovery-challenge"> MIT-EPiQC-CMU-Duke</a></td>
         <td>149.393</td>
         <td>99.893</td>
         <td>40</td>
