--- a/Winners.html
+++ b/Winners.html
@@ -140,7 +140,7 @@
     </tr>
     <tr>
         <td>3</td>
-        <td>QuantumLoop</td>
+        <td><a href="https://github.com/voodoocjl/QuantumLoop_ICCAD2023"> QuantumLoop</a></td>
         <td>147.832</td>
         <td>99.732</td>
         <td>39.6</td>
