--- a/Winners.html
+++ b/Winners.html
@@ -180,7 +180,7 @@
     </tr>
     <tr>
         <td>8</td>
-        <td>ZJU_CS_QuLab</td>
+        <td><a href="https://github.com/JanusQ/QCfDD"> ZJU_CS_QuLab</a></td>
         <td>141.418</td>
         <td>96.218</td>
         <td>36.2</td>
